# WarheadDiscordClient

./: CMakeLists.txt  README.md
apps/EnumUtils/: enumutils_describe.py
cmake/: showoptions.cmake
sql/base/db_discord/: updates.sql  updates_include.sql
src/: CMakeLists.txt
src/app/: CMakeLists.txt  Main.cpp  WarheadDiscord.conf.dist  WarheadDiscord.rc  WarheadDiscordClient.conf.dist  WarheadDiscordClient.rc
src/client/: CMakeLists.txt
src/client/Client/: ClientSocket.cpp  ClientSocket.h  ClientSocketMgr.cpp  ClientSocketMgr.h
src/client/Config/: DiscordConfig.cpp  DiscordConfig.h
src/client/Time/: GameTime.h  (+2 more)
src/common/: CMakeLists.txt  Define.h  GitRevision.cpp
src/discord/: CMakeLists.txt
src/discord/Bot/: DiscordBot.cpp  DiscordBot.h
src/discord/Config/: DiscordConfig.cpp  DiscordConfig.h
src/discord/Discord/: Discord.cpp  Discord.h
src/discord/Handlers/: AuthHandler.cpp  MessageHandler.cpp  MiscHandler.cpp
src/discord/Server/: DiscordPacket.h  DiscordSession.cpp  DiscordSession.h  DiscordSocket.cpp  DiscordSocket.h  DiscordSocketMgr.cpp  DiscordSocketMgr.h  Packet.cpp  Packet.h
src/discord/Server/Packets/: ByteBuffer.cpp  ByteBuffer.h  PacketUtilities.cpp  PacketUtilities.h
src/discord/Server/Packets/PacketsImpl/: AllPackets.h  AuthPackets.cpp  AuthPackets.h  MessagePackets.cpp  MessagePackets.h  MiscPackets.cpp  MiscPackets.h
src/discord/Server/Protocol/: Opcodes.cpp  Opcodes.h
src/discord/Time/: GameTime.h  UpdateTime.h
src/shared/: CMakeLists.txt  DiscordPacketHeader.h  DiscordSharedDefines.h  enuminfo_DiscordSharedDefines.cpp
(+20 files in other folders)
